syntax = "proto2";

package com.bus.app.backhomeduck5duck.proto;

message ExposureKeyExport {
    optional fixed64 startTs = 1;
    optional fixed64 endTs = 2;
    required int32 batchSize = 3;

    message ExposureKey {
        required string keyData = 1;
        required string keyInterval = 2;
    }

    repeated ExposureKey keys = 4;
}